; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_prep_pci.c_pci_write_bar.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_prep_pci.c_pci_write_bar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._pci_bar = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pci_write_bar(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, %struct._pci_bar* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct._pci_bar*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct._pci_bar* %5, %struct._pci_bar** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %11, align 4
  %18 = mul nsw i32 %17, 4
  %19 = add nsw i32 16, %18
  %20 = load %struct._pci_bar*, %struct._pci_bar** %12, align 8
  %21 = getelementptr inbounds %struct._pci_bar, %struct._pci_bar* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @pci_write(i32* %13, i32 %14, i32 %15, i32 %16, i32 %19, i32 4, i32 %22)
  ret void
}

declare dso_local i32 @pci_write(i32*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
